:heavy_plus_sign: Add styled-components and polished

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "polished": "^1.8.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
     "flow-bin": "^0.58.0",
@@ -22,9 +24,21 @@
     "prettier": "^1.8.0"
   },
   "lint-staged": {
-    "*.js": ["prettier --single-quote --trailing-comma all --write", "git add"],
-    "*.css": ["prettier", "git add"],
-    "*.json": ["prettier", "git add"],
-    "*.md": ["prettier", "git add"]
+    "*.js": [
+      "prettier --single-quote --trailing-comma all --write",
+      "git add"
+    ],
+    "*.css": [
+      "prettier",
+      "git add"
+    ],
+    "*.json": [
+      "prettier",
+      "git add"
+    ],
+    "*.md": [
+      "prettier",
+      "git add"
+    ]
   }
 }
